# python-template

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  LICENSE  README.md  docker-compose.yaml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build.yaml
tests/: test_example.py
